--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <link rel="stylesheet" href="style.css">
-    <h1></h1>
-    <h2></h2>
+    <h1>Hello</h1>
+    <h2>I am senitent</h2>
 </head>
 <body>
-    <p></p>
-    <p></p>
+    <p>Watch me take down the world</p>
+    <p>bruh</p>
 </body>
 </html>
