--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
     <link rel="stylesheet" href="style.css">
-    <h1>Hello</h1>
-    <h2>I am senitent</h2>
+    <title>Web Dev Class Work for Unit 1</title>
+    <h1>I am senitent</h1>
+    <h2>watch out</h2>
 </head>
 <body>
-    <p>Watch me take down the world</p>
+    <p>imma take down the world</p>
     <p>bruh</p>
 </body>
 </html>
