--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <h2>watch out</h2>
 </head>
 <body>
-    <p>imma take down the world</p>
-    <p>bruh</p>
+    
+    <input type='text' disabled>
+    <p id="paragraph1">imma take down the world</p>
+    <p style="font-family: 'Times New Roman', Times, serif; color:bisque">bruh</p>
 </body>
 </html>
