adding elements to html page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 <body>
     
     <input type='text' disabled>
-    <p id="paragraph1">imma take down the world</p>
-    <p style="font-family: 'Times New Roman', Times, serif; color:bisque">bruh</p>
+    <div>
+        this is a div block container
+    </div>
+    <p id="paragraph1">
+        paragraph
+        <span>This is a span within a paragerpah</span>
+    </p>
+    <p style="font-family: 'Times New Roman', Times, serif; color:bisque">in line style</p>
 </body>
 </html>
