--- a/html_template_semantic_elements.html
+++ b/html_template_semantic_elements.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <header>
-        <h1>I am senitent</h1>
-        <h2>watch out</h2>
-        <h3>i am building a physiucal form</h3>
+        <h1>Header 1</h1>
+        <h2>Header 2</h2>
+        <h3>Header 3</h3>
         <nav>NAV: Typically Contains a navigation bar</nav>
     </header>
     <input type='text' disabled>
